--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ctims-ui",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Citms A Component Library for Vue.js.",
   "main": "lib/citms-ui.common.js",
   "files": [
@@ -16,7 +16,7 @@
     "build:theme": "node build/bin/gen-cssfile && gulp build --gulpfile packages/theme-chalk/gulpfile.js && cp-cli packages/theme-chalk/lib lib/theme-chalk",
     "build:utils": "cross-env BABEL_ENV=utils babel src --out-dir lib --ignore src/index.js",
     "build:umd": "node build/bin/build-locale.js",
-    "clean": "rimraf lib && rimraf packages/*/lib && rimraf test/**/coverage && lerna clean --yes",
+    "clean": "rimraf lib && rimraf packages/*/lib && rimraf test/**/coverage",
     "deploy": "npm run deploy:build && gh-pages -d examples/citms-ui --remote ctims && del examples/ctims-ui",
     "deploy:build": "npm run build:file && cooking build -c build/cooking.demo.js -p",
     "dev": "npm run bootstrap && npm run build:file && cooking watch -c build/cooking.demo.js -p & node build/bin/template.js",
