--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cimts-ui",
-  "version": "1.0.6",
+  "name": "citms-ui",
+  "version": "1.0.7",
   "description": "Citms A Component Library for Vue.js.",
   "main": "lib/citms-ui.common.js",
   "files": [
@@ -17,7 +17,7 @@
     "build:utils": "cross-env BABEL_ENV=utils babel src --out-dir lib --ignore src/index.js",
     "build:umd": "node build/bin/build-locale.js",
     "clean": "rimraf lib && rimraf packages/*/lib && rimraf test/**/coverage",
-    "deploy": "npm run deploy:build && gh-pages -d examples/citms-ui --remote cimts && del examples/cimts-ui",
+    "deploy": "npm run deploy:build && gh-pages -d examples/citms-ui --remote citms && del examples/citms-ui",
     "deploy:build": "npm run build:file && cooking build -c build/cooking.demo.js -p",
     "dev": "npm run bootstrap && npm run build:file && cooking watch -c build/cooking.demo.js -p & node build/bin/template.js",
     "dev:play": "npm run build:file && cross-env PLAY_ENV=true cooking watch -c build/cooking.demo.js -p",
@@ -26,7 +26,7 @@
     "i18n": "node build/bin/i18n.js",
     "lint": "eslint src/**/* test/**/* packages/**/*.{js,vue} build/**/* --quiet",
     "pub": "npm run bootstrap && sh build/git-release.sh && sh build/release.sh && node build/bin/gen-indices.js && sh build/deploy-faas.sh",
-    "pub:all": "npm run dist:all && lerna publish --skip-git && git commit -am 'publish independent packages' && git push cimts dev",
+    "pub:all": "npm run dist:all && lerna publish --skip-git && git commit -am 'publish independent packages' && git push citms dev",
     "test": "npm run lint && npm run build:theme && cross-env CI_ENV=/dev/ karma start test/unit/karma.conf.js --single-run",
     "test:watch": "npm run build:theme && karma start test/unit/karma.conf.js"
   },
@@ -35,7 +35,7 @@
     "url": "git+https://github.com/renming458/citms-ui"
   },
   "keywords": [
-    "cimts",
+    "citms",
     "vue",
     "components"
   ],
